
- strip ampersands from strings returned by wxMenuBar::GetLabelTop()
- fixed bug in wxIniConfig::DeleteEntry() (Parinya Thipchart)
- fixed hang (sometimes) in wxThread::Delete() (Carl-Friedrich Braun)
- wxLongLong formatting with MinGW corrected
- wxFileDialog now returns correct filter index for multiple-file dialogs
- Fixed a bug in wxSpinCtrl::DoGetBestSize that would make wxSpinCtrl too tall

wxGTK:

- allow calling wxWindow::SetFont if window not yet created

wxOS2:
- fixed various problems in file handling
- fixed bug in Refresh (was not taking reversed coordinate system into
  account, so failed for most generic controls)
- partly fixed wxMouseEvent (reversed coordinate system again, handling of
  CTRL and SHIFT keys. ALT still doesn't work as expected by wxWidgets, though)

wxODBC:
- Identifying DB VENDOR signatures updated in wxDb::Dbms()
- wxDb::getDbInfo() will no longer return failure if the return code was 
  SQL_SUCCESS_WITH_INFO
- Attempted to port everything for BLOB support back to 2.4.x.  I think it is
  complete.
- Table names now prepended to column names when joining tables.  This is only 
  if there is not a '.' in the column name already.
- Null column support fixes (SF #766404)



2.4.2
-----

All:

- always NUL-terminate the log messages
- wxRegEx::Compile() now calculates the number of groups correctly
- wxHTTP::GetHeader() didn't find headers which were not all in upper case
- wxHTTP input stream didn't detect EOF correctly
- wxString::find_last_of() ignored "start" parameter (Robert Vazan)
- a bug in wxArrayString::Shrink() fixed (Gunnar Roth)
- added wxIPV4address::IPAddress()

All (GUI):

- rare crash in wxFontMapper fixed (Robert Vazan)
- added wxMenu::FindItemByPosition.
- copy wxImage options when copying the images

Generic:

- wxListCtrl: respect wxLC_NO_HEADER style when inserting first column

Unix:

- fixed build problems with OpenGL when libGL(U) were in different directories