@@ -846,7 +846,7 @@ already is filled up to the maximal length, a
 (giving it the possibility to show an explanatory message, for example) and the
 extra input is discarded.
 
-Note that this function may only be used with single line text controls.
+Note that under GTK+, this function may only be used with single line text controls.
 
 \wxheading{Compatibility}
 
